--- a/client-Crud2-Gruppo4-/Crud2-Quattro-Client/src/app/table/table.component.html
+++ b/client-Crud2-Gruppo4-/Crud2-Quattro-Client/src/app/table/table.component.html
@@ -1,5 +1,4 @@
-<p>table works!</p>
-
+<div id = "area2">
 <input type="text" placeholder="cerca per codice" [(ngModel)] = "ricerca">
 <button (click) ="cerca()">Cerca</button>
 
@@ -16,3 +15,4 @@
         </tr>
 
 </table>
+</div>
